Added code for testing

--- a/P03-ReviewsAPI/src/main/resources/application.properties
+++ b/P03-ReviewsAPI/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-# FIXME: Follow instructions to setup MySQL and add the following properties
-spring.datasource.url=jdbc:mysql://localhost:3306/reviewsdb
+ FIXME: Follow instructions to setup MySQL and add the following properties
+spring.flyway.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/reviewsdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=admin
 
