Added spring.jpa.open-in-view=true to the application.properties file to remove warning.

--- a/P03-ReviewsAPI/src/main/resources/application.properties
+++ b/P03-ReviewsAPI/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 #spring.main.banner-mode=off
 spring.output.ansi.enabled=ALWAYS
+
+spring.jpa.open-in-view=true
+
